<resources>
    <string name="app_name">ChaTSISI</string>
    <string name="agendas">Agendas</string>
    <string name="chats">Chats</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="mi_perfil">Mi Perfil</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="contraseña_olvidada">He olvidado la contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="crear_cuenta">No tengo cuenta</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="correo">Correo UPM</string>
    <string name="repetir_contraseña">Repetir Contraseña</string>
    <string name="crear_nueva_cuenta">Crear cuenta</string>
    <string name="nombre_usaurio">Nombre usuario</string>
    <string name="alias">Alias</string>
    <string name="estado">Estado</string>
    <string name="descripcion">Descripcion</string>
    <string name="error_hoja_id">error_hoja_id</string>
    <string name="error_local">error_local</string>
    <string name="error_ubicacion">error_ubicacion</string>
    <string name="error_cargo">error_cargo</string>
    <string name="error_oficina">error_oficina</string>
    <string name="error_ambiente">error_ambiente</string>
    <string name="error_area">error_area</string>
    <string name="nombre_agenda">Nombre agenda</string>

</resources>
